--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -16,19 +16,8 @@
       width: 100%;
       font-family: $font-family-fascinate;
       font-size: 54px ! important;
-      margin-top: 12% ! important;
+      margin-top: 140px ! important;
       text-align: center;
-    }
-
-    &.navbar-fixed-top {
-      height: 64px;
-
-      h1 {
-        padding-left: 60px;
-        font-size: 28px ! important;
-        margin: auto ! important;
-        text-align: left;
-      }
     }
 
     .navbar-header-right {
@@ -43,5 +32,33 @@
         text-shadow: 0 1px rgba(0, 0, 0, 0.15);
       }
     }
+
+    &.navbar-fixed-top {
+      height: 64px;
+      background-color: black ! important;
+
+      h1 {
+        padding-left: 60px;
+        font-size: 28px ! important;
+        margin: auto ! important;
+        text-align: left;
+      }
+
+      .navbar-header-right {
+        display: none;
+      }
+    }
   }
+
+  .navbar-icon-right {
+    display: none;
+
+    &.fixed {
+      display: inline-block;
+      position: relative;
+      top: 20px;
+      right: 50px;
+    }
+  }
+
 }
